Checkboxes changed according to the legal documents

--- a/app/templates/privacy_and_cookies.html
+++ b/app/templates/privacy_and_cookies.html
@@ -177,7 +177,58 @@
     </ul>
     <h4><strong>Which cookies do we use?</strong></h4>
     <p>We use both session ID cookies and persistent cookies. We use session cookies to make it easier for you to navigate our Website. A session ID cookie expires when you close your browser. A persistent cookie remains on your hard drive for an extended period of time</p>
-    <br><br>INSERIR TAULA DE LES COOKIES<br><br>
+    <style>th, td {border: 1px solid #191c1f; padding: 0.5em;}</style>
+    <table style="width:100%; margin-bottom: 1em;">
+      <tr>
+	<th>Cookie</th>
+	<th>Owner</th>
+	<th>Duration</th>
+	<th>Purpose</th>
+      </tr>
+      <tr>
+	<td>_cfduid</td>
+	<td>Cloudfare</td>
+	<td>6 months</td>
+	<td>Identify individual clients behind a shared IP address and apply security settings on a per-client basis.</td>
+      </tr>
+      <tr>
+	<td>_ga</td>
+	<td>Google</td>
+	<td>2 years</td>
+	<td>Used to distinguish users.</td>
+      </tr>
+      <tr>
+	<td>_gat</td>
+	<td>Google</td>
+	<td>1 minute</td>
+	<td>Used to throttle request rate. If Google Analytics is deployed via Google Tag Manager, this cookie will be named _dc_gtm_<property-id>.</td>
+      </tr>
+      <tr>
+	<td>_gid</td>
+	<td>Google</td>
+	<td>1 day</td>
+	<td>Used to distinguish users.</td>
+      </tr>
+      <tr>
+	<td>csrftoken</td>
+	<td>Hackers@UPC</td>
+	<td>Undefined</td>
+	<td>Protection against CSRF attacks.</td>
+      </tr>
+      <tr>
+	<td>optimizelyEndUserId</td>
+	<td>Cloudfare</td>
+	<td>6 months</td>
+	<td>Stores a visitor's unique Optimizely identifier, for both Optimizely Classic and Optimizely X Web. It's a combination of a timestamp and random number.</td>
+      </tr>
+      <tr>
+	<td>sessionid</td>
+	<td>Hackers@UPC</td>
+	<td>15 days</td>
+	<td>Mantains logged in session.</td>
+      </tr>
+    </table>
+    <p>We also use local storage to save if users have clicked on "OK" on the cookie notification bar. The data saved only consists of a key "cookies" with value "1".</p>
     <h4><strong>Can I refuse or opt out of cookies?</strong></h4>
     <p>You can delete cookies at any time using the special settings of your web browser. Given the large number of browsers and versions available on the market, we cannot provide technical assistance on the process of blocking or removing cookies from each of them. For such purposes, you should consult the manuals and support services provided by the manufacturer of the browser that you are using. In any case, for information only, we provide the following links that detail how to allow, block or delete cookies in the main browsers in the market at the time of writing this Policy:</p>
     <ul style="padding-left: 1em;">
