Hiding field fixed if different parent structures

--- a/app/templates/privacy_and_cookies.html
+++ b/app/templates/privacy_and_cookies.html
@@ -232,8 +232,8 @@
     <h4><strong>Can I refuse or opt out of cookies?</strong></h4>
     <p>You can delete cookies at any time using the special settings of your web browser. Given the large number of browsers and versions available on the market, we cannot provide technical assistance on the process of blocking or removing cookies from each of them. For such purposes, you should consult the manuals and support services provided by the manufacturer of the browser that you are using. In any case, for information only, we provide the following links that detail how to allow, block or delete cookies in the main browsers in the market at the time of writing this Policy:</p>
     <ul style="padding-left: 1em;">
-      <li>Safari: <a href="http://support.apple.com/kb/PH17191" target=_blank">http://support.apple.com/kb/PH17191</a></li>
-      <li>Firefox: <a href="https://support.mozilla.org/es/kb/cookies-informacion-que-los-sitios-web-guardan-en-?esab=a&s=cookies&r=1&as=s" target="_blank">https://support.mozilla.org/es/kb/cookies-informacion-que-los-sitios-web-guardan-en-?esab=a&s=cookies&r=1&as=s</a></p>
+      <li>Safari: <a href="http://support.apple.com/kb/PH17191" target=_blank">http://support.apple.com/kb/PH17191</a>.</li>
+      <li>Firefox: <a href="https://support.mozilla.org/es/kb/cookies-informacion-que-los-sitios-web-guardan-en-?esab=a&s=cookies&r=1&as=s" target="_blank">https://support.mozilla.org/es/kb/cookies-informacion-que-los-sitios-web-guardan-en-?esab=a&s=cookies&r=1&as=s</a>.</p>
       <li>Google Chrome: <a href="https://support.google.com/accounts/answer/61416" target="_blank">https://support.google.com/accounts/answer/61416</a>.</p>
       <li>Internet Explorer: http://windows.microsoft.com/es-es/windows7/how-to-manage-cookies-in-internet-explorer-9</li>
       <li>Opera: <a href="http://help.opera.com/Windows/11.50/es-ES/cookies.html" target="_blank">http://help.opera.com/Windows/11.50/es-ES/cookies.html</a>.</li>
