--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -8,7 +8,7 @@
 
     <meta name="theme-color" content="#f8f8f8">
     <meta name="author" content="{{ h_name }}">
-    <link rel="icon" href="{% static 'favicon.png' %}" type="image/png">
+{#    <link rel="icon" href="{% static 'favicon.png' %}" type="image/png">#}
     <link rel="icon" href="{% static 'favicon.ico' %}" type="image/x-icon">
     <meta name="description" content="{{ h_description }}">
 
@@ -193,8 +193,8 @@
                 {# You can remove it, but if you dont care, please keep it. I'm a sentimental - Gerard Casas contact@gerard.space #}
                 <span style="display: none">BIENE {{ h_name }}</span>
                 <br><br>
-                <a href="/legal_notice/">Legal notice</a> | 
-                <a href="/terms_and_conditions/">Terms and conditions</a> | 
+                <a href="/legal_notice/">Legal notice</a> |
+                <a href="/terms_and_conditions/">Terms and conditions</a> |
                 <a href="/privacy_and_cookies/">Privacy and cookies</a>
             </div>
         </div>
