fix hover color on button

--- a/app/templates/base_email.html
+++ b/app/templates/base_email.html
@@ -20,7 +20,7 @@
 	    color: #aa002d;
 	    text-decoration: none;
 	}
-    
+
         @media only screen and (max-width: 620px) {
             table[class=body] h1 {
                 font-size: 28px !important;
@@ -103,12 +103,12 @@
             }
 
             .btn-primary table td:hover {
-                background-color: #34495e !important;
+                background-color: #aa002d !important;
             }
 
             .btn-primary a:hover {
-                background-color: #34495e !important;
-                border-color: #34495e !important;
+                background-color: #aa002d !important;
+                border-color: #aa002d !important;
             }
         }
     </style>
