fix login/signup buttons texts

--- a/user/templates/login.html
+++ b/user/templates/login.html
@@ -13,10 +13,10 @@
         {% bootstrap_form form %}
 
         <p><a href="{% url 'password_reset' %}">Forgot your password?</a></p>
-        <button class="btn btn-primary btn-block" type="submit">{% trans "Sign In" %}</button>
+        <button class="btn btn-primary btn-block" type="submit">{% trans "Log In" %}</button>
         {% if not h_app_closed %}
             <a class="btn btn-block"
-               href="{% url 'account_signup' %}">{% trans "...or sign up if you don't have an account" %}</a>
+               href="{% url 'account_signup' %}">{% trans "Sign up" %}</a>
         {% endif %}
 
     </form>
