--- a/user/templates/signup.html
+++ b/user/templates/signup.html
@@ -22,7 +22,7 @@
             {% bootstrap_form form  %}
             <button class="btn btn-primary btn-block" type="submit">{% trans "Sign Up" %}</button>
             <a class="btn btn-block"
-               href="{% url 'account_login' %}">{% trans "...or log in if you already have an account " %}</a>
+               href="{% url 'account_login' %}">{% trans "Log In" %}</a>
         </form>
     {% endif %}
 
