Added checkbox for poly on registration

--- a/app/templates/privacy_and_cookies.html
+++ b/app/templates/privacy_and_cookies.html
@@ -30,7 +30,7 @@
       <li>Academic and professional data: CV, year of graduation, university, current studies and a link to professional profiles on-line (github, linkedin, devpost).</li>
       <li>Economic and financial data: E-mail related to your PayPal account.</li>
       <li>Health data: Food allergies and intolerances.</li>
-      <li>Other information: Password, last connection and dietary preferences.</li>
+      <li>Other information: Account password, last connection and dietary preferences.</li>
     </ul>
     <p>Here are the details of which personal data is collected when you register as a Volunteer:</p>
     <ul style="padding-left: 1em;">
@@ -39,7 +39,7 @@
       <li>Data on personal characteristics: Sex, if you are a minor, t-shirt size.</li>
       <li>Academic and professional data: University, current studies and previous experience.</li>
       <li>Health data: Food allergies and intolerances.</li>
-      <li>Other information: Dietary preferences.</li>
+      <li>Other information: Account password, dietary preferences.</li>
     </ul>
     <p>Here are the details of which personal data is collected when you register as an Organizer:</p>
     <ul style="padding-left: 1em;">
@@ -49,7 +49,7 @@
       <li>Data on personal characteristics: T-shirt size.</li>
       <li>Economic and financial data: Bank account.</li>
       <li>Health data: Food allergies and intolerances.</li>
-      <li>Other information: Dietary preferences.</li>
+      <li>Other information: Account password, dietary preferences.</li>
       <li>Academic Data and professional data: Current studies, year of studies, link to professional profiles online (GitHub, LinkedIn).</li>
     </ul>
     <p>Here are the details of which personal data is collected when you register as a Judge or a Mentor:</p>
@@ -58,12 +58,12 @@
       <li>Contact data: E-mail and phone number.</li>
       <li>Data on personal characteristics: Sex and t-shirt size.</li>
       <li>Health data: Food allergies and intolerances.</li>
-      <li>Other information: Dietary preferences.</li>
+      <li>Other information: Accound password, dietary preferences.</li>
     </ul>
-    <p>Here are the details of which personal data is collected when you register as "other attendees”:</p>
+    <p>Here are the details of which personal data is collected when you register as "other attendees/users”:</p>
     <ul style="padding-left: 1em;">
       <li>Identifying data: Name, surname/s and images or videos of yourself.</li>
-      <li>Contact data: E-mail.</li>
+      <li>Contact data: Account password, e-mail.</li>
     </ul>
     <p>Here are the details of which personal data is collected when you register as a Sponsor:</p>
     <ul style="padding-left: 1em;">
@@ -80,7 +80,7 @@
     
     <hr>
     <h3>3.WHAT WE PROCESS YOUR PERSONAL DATA FOR</h3>
-    <p>When you subscribe to be the first to know when applications open, register as a Participant, register as a Volunteer, register as an Organizer, register as a Judge or a Mentor or register as "other attendees”:</p>
+    <p>When you subscribe to be the first to know when applications open, register as a Participant, register as a Volunteer, register as an Organizer, register as a Judge or a Mentor or register as "other attendees/users”:</p>
     <ul style="padding-left: 1em;">
       <li>HACKERS AT UPC shall process your personal data to handle and process requests received from you, whether for information, registration, participation in promotions or the rendering of services.</li>
       <li>In addition, your personal data shall be processed to send, including via electronic media, commercial communications about activities, services or products offered by HACKERS AT UPC that are of a similar nature to those previously requested by you.</li>
@@ -105,7 +105,7 @@
     
     <hr>
     <h3>4.WHY WE MAY PROCESS YOUR PERSONAL DATA</h3>
-    <p>When you subscribe to be the first to know when applications open, register as a Participant, register as a Volunteer, register as an Organizer, register as a Judge or a Mentor or register as "other attendees”:</p>
+    <p>When you subscribe to be the first to know when applications open, register as a Participant, register as a Volunteer, register as an Organizer, register as a Judge or a Mentor or register as "other attendees/users”:</p>
     <ul style="padding-left: 1em;">
       <li>HACKERS AT UPC is legally entitled to process personal data for handing and processing requests from you, as this is required for HACKERS AT UPC to meet its contractual obligations in respect of such requests.</li>
       <li>With regard to commercial communications sent about activities, services or products offered by HACKERS AT UPC of a similar nature to those previously requested or acquired by you, the processing of your personal data responds to a legitimate interest of HACKERS AT UPC, expressly recognised by the data protection regulation, as well as by the regulations on services in the information society.</li>
