--- a/applications/templates/include/application_form.html
+++ b/applications/templates/include/application_form.html
@@ -29,7 +29,8 @@
             {% endfor %}
         </fieldset>
     {% endfor %}
-    <small><span style="color: red">*</span>Indicates required field</small>
+    <p class="team-info"><i class="fa fa-exclamation-triangle"></i> <strong>Remember!</strong> Your team members still have to apply separately.</p>
+    <small><span style="color: red">*</span>Indicates required field.</small>
 
     {% if not application or application.can_be_edit %}
         <button class="btn btn-success btn-block" type="submit">{% if application %}Update application{% else %}
