--- a/user/templates/signup.html
+++ b/user/templates/signup.html
@@ -20,6 +20,7 @@
         <form action="" method="post" class="form">
             {% csrf_token %}
             {% bootstrap_form form  %}
+	    <p class="team-info team-info-margin"><i class="fa fa-exclamation-triangle"></i> <strong>Remember!</strong> Your team members still have to register separately.</p>
             <button class="btn btn-primary btn-block" type="submit">{% trans "Sign Up" %}</button>
             <a class="btn btn-block"
                href="{% url 'account_login' %}">{% trans "Log In" %}</a>
