Changed using SingleTableMixin and removed double import

--- a/baggage/templates/baggage_list.html
+++ b/baggage/templates/baggage_list.html
@@ -1,6 +1,2 @@
 {% extends "base_table.html" %}
-{% load django_tables2 %}
-{% block head_title %}All baggage{% endblock %}
-
-{% block table_footer %}
-{% endblock %}
+{% block head_title %}Baggage check-in{% endblock %}
