Fixture and foreign key show on admin

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -103,6 +103,7 @@
                                         <a href="{% url 'reimbursement_list' %}">Reimbursements</a></li>
                                 {% endif %}
                             {% endif %}
+                            {% include 'include/baggage_tab.html' %}
                             {% if request.user.is_organizer or request.user.is_volunteer %}
                                 <li class="{% if 'checkin' in request.build_absolute_uri %}active{% endif %}">
                                     <a href="{% url 'check_in_list' %}">Check-in</a></li>
