--- a/baggage/templates/baggage_list.html
+++ b/baggage/templates/baggage_list.html
@@ -1,26 +1,50 @@
 {% extends "base_table.html" %}
-<<<<<<< HEAD
 
 {% load static %}
 {% load bootstrap3 %}
 
 {% block head_title %}Baggage check-in{% endblock %}
 
-<style>
-    .field-left, .field-right{
-        width: 48%;
-    }
-    .field-left{
-        float: left;
-    }
-    .field-right{
-        float: right;
-    }
-</style>
+{% block extra_head %}
+  <style>
+  </style>
+{% endblock %}
 
-<script src="{% static 'js/form_modifiers.js' %}"></script>
-<script type="text/javascript" src="//cdn.jsdelivr.net/bootstrap.daterangepicker/2/daterangepicker.js"></script>
-<link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/bootstrap.daterangepicker/2/daterangepicker.css" />
-=======
-{% block head_title %}Baggage check-in{% endblock %}
->>>>>>> 84d2bc9222f1a05e83403b71594fd431c861f98e
+{% block extra_panel %}
+    <script src="{% static 'lib/typeahead.min.js' %}"></script>
+    <script src="{% static 'js/form_modifiers.js' %}"></script>
+    <script type="text/javascript" src="//cdn.jsdelivr.net/momentjs/latest/moment.min.js"></script>
+    <script type="text/javascript" src="//cdn.jsdelivr.net/bootstrap.daterangepicker/2/daterangepicker.js"></script>
+    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/bootstrap.daterangepicker/2/daterangepicker.css" />
+
+    <script>
+
+        $(document).ready(function () {
+                var exp_time = $('input[name="time_from"]');
+                exp_time.daterangepicker({
+                    timePicker: true,
+                    singleDatePicker: true,
+                    timePicker24Hour: true,
+                    timePickerIncrement: 5,
+                    startDate: moment(exp_time.val()),
+                    locale: {
+                        firstDay: 1,
+                        format: 'YYYY-MM-DD H:mm:ss'
+                    }
+                });
+                var exp_time2 = $('input[name="time_to"]');
+                exp_time2.daterangepicker({
+                    timePicker: true,
+                    singleDatePicker: true,
+                    timePicker24Hour: true,
+                    timePickerIncrement: 5,
+                    startDate: moment(exp_time2.val()),
+                    locale: {
+                        firstDay: 1,
+                        format: 'YYYY-MM-DD H:mm:ss'
+                    }
+                });
+            }
+        );
+    </script>
+{% endblock %}
