create judging app and start view of project import

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -108,6 +108,7 @@
                                     <a href="{% url 'check_in_list' %}">Check-in</a></li>
                             {% endif %}
                         {% endif %}
+                        <li><a href="{% url 'import_projects' %}">Judging</a></li>
                         <li><a href="{% url 'account_logout' %}">Logout</a></li>
 
                     {% else %}
