--- a/baggage/templates/baggage_list.html
+++ b/baggage/templates/baggage_list.html
@@ -3,7 +3,7 @@
 {% load static %}
 {% load bootstrap3 %}
 
-{% block head_title %}Baggage check-in{% endblock %}
+{% block head_title %}Baggage check-out{% endblock %}
 
 {% block extra_head %}
   <style>
