--- a/baggage/templates/baggage_detail.html
+++ b/baggage/templates/baggage_detail.html
@@ -1,12 +1,12 @@
 {% extends "base_tabs.html" %}
 {% block head_title %}Check-out bag {{ bag.id }}{% endblock %}
 {% block panel %}
-    <dl class="dl-horizontal">
+    <dl class="dl-horizontal" style="margin-bottom: 0;">
         {% include 'include/field.html' with desc='Bag id' value=bag.id %}
         {% include 'include/field.html' with desc='Room' value=bag.room %}
         {% include 'include/field.html' with desc='Position' value=position %}
-        {% include 'include/field.html' with desc='Type' value=bag.type %}
-        {% include 'include/field.html' with desc='Color' value=bag.color %}
+        {% include 'include/field.html' with desc='Type' value=bag.get_type_display %}
+        {% include 'include/field.html' with desc='Color' value=bag.get_color_display %}
         {% include 'include/field.html' with desc='Description' value=bag.description %}
         {% include 'include/field.html' with desc='Time added' value=bag.time %}
         {% include 'include/field.html' with desc='Time updated' value=bag.updated %}
@@ -16,15 +16,14 @@
 {% block cols-panel %}col-md-6 col-md-offset-3{% endblock %}
 {% block out_panel %}
     <div class="panel-footer">
-        {% if checkedout %}
-            <h4>Iep! Bag already checked out!</h4>
-            <a class="btn btn-default btn-block" href="{% url 'baggage_add' %}">Check-in</a>
-            <a class="btn btn-default btn-block" href="{% url 'baggage_list' %}">Check-out</a>
+        {% if checkedout or first == 'first/' %}
+            <a class="btn btn-default btn-block" href="{% url 'baggage_add' %}">Check-in others</a>
+            <a class="btn btn-default btn-block" href="{% url 'baggage_list' %}">Check-out others</a>
         {% else %}
             <form action="" method="post">
                 {% csrf_token %}
                 <input type="hidden" name="bag_id" value="{{ bag.id }}"/>
-                <button class="btn btn-success btn-block" name="checkout">Check-out</button>
+                <button class="btn btn-success btn-block" name="checkout">Check-out this bag</button>
             </form>
         {% endif %}
     </div>
