Updated privacy policy

--- a/app/templates/privacy_and_cookies.html
+++ b/app/templates/privacy_and_cookies.html
@@ -58,17 +58,23 @@
       <li>Contact data: E-mail and phone number.</li>
       <li>Data on personal characteristics: Sex and t-shirt size.</li>
       <li>Health data: Food allergies and intolerances.</li>
-      <li>Other information: Accound password, dietary preferences.</li>
+      <li>Other information: Dietary preferences.</li>
     </ul>
     <p>Here are the details of which personal data is collected when you register as "other attendees/users”:</p>
     <ul style="padding-left: 1em;">
       <li>Identifying data: Name, surname/s and images or videos of yourself.</li>
-      <li>Contact data: Account password, e-mail.</li>
+      <li>Contact data: e-mail.</li>
+      <li>Data on personal characteristics: Sex and t-shirt size</li>
+      <li>Health data: Food allergies and intolerances.</li>
+      <li>Other information: Dietary preferences.</li>
     </ul>
     <p>Here are the details of which personal data is collected when you register as a Sponsor:</p>
     <ul style="padding-left: 1em;">
       <li>Identifying data: Name, surname/s and images or videos of the contact person or the employee of the Sponsor.</li>
-      <li>Business contact data: Corporate e-mail of the contact person or the employee of the Sponsor.</li>
+      <li>Business contact data: Corporate e-mail of the contact person or the employee of the Sponsor. We also collect what company you are working for currently as well as your Job title.</li>
+      <li>Data on personal characteristics: Sex</li>
+      <li>Health data: Food allergies and intolerances.</li>
+      <li>Other information: Dietary preferences.</li>
     </ul>
     <p>Here are the details of which personal data is collected during a HackUPC CHEATING RESPONSE PROCEDURE:</p>
     <ul style="padding-left: 1em;">
