--- a/baggage/templates/baggage_users.html
+++ b/baggage/templates/baggage_users.html
@@ -3,7 +3,22 @@
 {% load static %}
 {% load bootstrap3 %}
 
+{% block extra_head %}
+    <link rel="stylesheet" href="{% static 'css/baggage.css' %}">
+    <script src="{% static 'lib/instascan.min.js' %}"></script>
+    <script type="text/javascript" src="{% static 'js/baggage.js' %}"></script>
+{% endblock %}
+
 {% block head_title %}Baggage check-in{% endblock %}
+
+{% block panel %}
+    <div id="baggage-container">
+        <form id="baggage-search" action="" method="get" class="form text-left filter">
+            {% include 'include/input.html' with type='qr' desc='Search' name='search' id='id_search' %}
+            <button type="submit" class="btn btn-info">Filter</button>
+        </form>
+    </div>
+{% endblock %}
 
 {% block extra_panel %}
     <script src="{% static 'lib/typeahead.min.js' %}"></script>
