--- a/baggage/templates/baggage_detail.html
+++ b/baggage/templates/baggage_detail.html
@@ -16,9 +16,9 @@
 {% block cols-panel %}col-md-6 col-md-offset-3{% endblock %}
 {% block out_panel %}
     <div class="panel-footer">
-        {% if checkedout or first == 'first/' %}
-            <a class="btn btn-default btn-block" href="{% url 'baggage_add' %}">Check-in others</a>
-            <a class="btn btn-default btn-block" href="{% url 'baggage_list' %}">Check-out others</a>
+        {% if checkedout or first %}
+            <a class="btn btn-default btn-block" href="{% url 'baggage_search' %}">Search another user</a>
+            <a class="btn btn-default btn-block" href="{% url 'baggage_list' %}">List all baggage</a>
         {% else %}
             <form action="" method="post">
                 {% csrf_token %}
