--- a/baggage/templates/baggage_users.html
+++ b/baggage/templates/baggage_users.html
@@ -6,7 +6,7 @@
 {% block extra_head %}
     <link rel="stylesheet" href="{% static 'css/baggage.css' %}">
     <script src="{% static 'lib/instascan.min.js' %}"></script>
-    <script type="text/javascript" src="{% static 'js/baggage.js' %}"></script>
+    <script type="text/javascript" src="{% static 'js/baggage_search.js' %}"></script>
 {% endblock %}
 
 {% block head_title %}Baggage check-in{% endblock %}
