--- a/baggage/templates/baggage_add.html
+++ b/baggage/templates/baggage_add.html
@@ -31,7 +31,7 @@
 {% block cols-panel %}col-md-6 col-md-offset-3{% endblock %}
 
 {% block out_panel %}
-    <form action="" method="post">
+    <form id="baggage-form" action="" method="post" enctype="multipart/form-data">
 	{% csrf_token %}
 	<div class="form-group">
 	    <label class="control-label" for="bag_type">Type</label>
@@ -42,11 +42,16 @@
 	    <input type="text" id="id_bag_color" class="form-control" name="bag_color" />
 	</div>
 	<div class="form-group">
+	    <label class="control-label" for="baggage-scan-image">Image</label>
+	    <div id="baggage-scan-image"></div>
+	    <input type="hidden" class="form-control" id="baggage-scan-file" name="bag_image" />
+	</div>
+	<div class="form-group">
 	    <label class="control-label" for="bag_description">Description</label>
 	    <textarea rows="4" cols="50" class="form-control" name="bag_description"></textarea>
 	</div>
 	<div class="form-group">
-	    <input type="checkbox" name="bag_special" value="special"> Special
+	    <input type="checkbox" name="bag_special" id="holita" value="special"> Special
 	</div>
         <input type="hidden" name="user_id" value="{{ user.id }}"/>
 	<button class="btn btn-success" name="checkin">Bag check-in</button>
