--- a/baggage/templates/baggage_add.html
+++ b/baggage/templates/baggage_add.html
@@ -35,11 +35,11 @@
 	{% csrf_token %}
 	<div class="form-group">
 	    <label class="control-label" for="bag_type">Type</label>
-	    <input type="text" id="id_bag_type" class="form-control" name="bag_type" />
+	    <input type="text" id="id_bag_type" class="form-control" name="bag_type" autocomplete="off" />
 	</div>
 	<div class="form-group">
 	    <label class="control-label" for="bag_color">Color</label>
-	    <input type="text" id="id_bag_color" class="form-control" name="bag_color" />
+	    <input type="text" id="id_bag_color" class="form-control" name="bag_color" autocomplete="off" />
 	</div>
 	<div class="form-group">
 	    <label class="control-label" for="baggage-scan-image">Image</label>
