--- a/meals/templates/meals_list.html
+++ b/meals/templates/meals_list.html
@@ -4,3 +4,7 @@
 {% load bootstrap3 %}
 
 {% block head_title %}Meals list{% endblock %}
+
+{% block extra_panel %}
+<a href="{% url 'meal_add' %}" class="btn btn-info" style="float: right;">Add new meal</a>
+{% endblock %}
