--- a/meals/templates/meal_add.html
+++ b/meals/templates/meal_add.html
@@ -26,7 +26,7 @@
 	</div>
 	<div class="form-group">
 	    <label class="control-label" for="meal_times">Times</label>
-	    <input type="text" class="form-control" name="meal_times" />
+	    <input type="number" class="form-control" name="meal_times" value="{{ meal.times }}" step="1" min="1" />
 	</div>
         <input type="hidden" name="meal_id" value="{{ meal.id }}"/>
 	<button class="btn btn-success" name="update">Add meal</button>
