--- a/baggage/templates/baggage_detail.html
+++ b/baggage/templates/baggage_detail.html
@@ -5,6 +5,7 @@
         {% include 'include/field.html' with desc='Bag id' value=bag.id %}
         {% include 'include/field.html' with desc='Room' value=bag.room %}
         {% include 'include/field.html' with desc='Position' value=position %}
+        {% include 'include/field.html' with desc='Owner' value=bag.owner %}
         {% include 'include/field.html' with desc='Type' value=bag.get_type_display %}
         {% include 'include/field.html' with desc='Color' value=bag.get_color_display %}
         {% include 'include/field.html' with desc='Description' value=bag.description %}
